# DV1729

./: .gitignore  README.md  main.py  pyproject.toml
data/DiffusionModels/: README.md
data/LoRAs/: README.md
lab1/: README.md  cloud_model.py  generate_image.py  generate_prompt_to_image.py  generate_prompt_to_image_lora.py  llm_discussion.py
lab2/: README.md  model.pth
lab_n8n/: README.md
lab_pytorch/: README.md  test_mnist.py  tutorial_example.py  visualize_tensor_lab.py
