[project]
name = "dv1729"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.36.0",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "peft>=0.18.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=5.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126"},
]
torchvision = [
  { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
